--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -20,7 +20,7 @@ framework:
         buses:
             messenger.bus.default: []
 
-#        routing:
+        routing:
 #            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
 #            Symfony\Component\Notifier\Message\ChatMessage: async
 #            Symfony\Component\Notifier\Message\SmsMessage: async
