--- a/.env
+++ b/.env
@@ -39,3 +39,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=smtp://127.0.0.1:1025
 ###< symfony/mailer ###
+
+### Timezone ###
+APP_TIMEZONE=Europe/Paris
