--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    timezone: '%env(APP_TIMEZONE)%'
+    media_directory: '%kernel.project_dir%/public/uploads/media'
 
 services:
     # default configuration for services in *this* file
