--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,10 +39,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/login, roles: PUBLIC_ACCESS }
-         - { path: ^/profile, roles: ROLE_USER }
-         - { path: ^/, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/article/[ ^/ ]+$, roles: PUBLIC_ACCESS }
+        - { path: ^/article, roles: ROLE_USER }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/reset-password, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: PUBLIC_ACCESS }
+        - { path: ^/profile, roles: PUBLIC_ACCESS }
 
 when@test:
     security:
