--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,12 +41,15 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/article/[ ^/ ]+$, roles: PUBLIC_ACCESS }
-        - { path: ^/article, roles: ROLE_USER }
+        - { path: ^/article, roles: ROLE_ADMIN }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/register, roles: PUBLIC_ACCESS }
         - { path: ^/reset-password, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: PUBLIC_ACCESS }
         - { path: ^/profile, roles: PUBLIC_ACCESS }
+        - { path: ^/user, roles: ROLE_ADMIN }
+        - { path: ^/category, roles: ROLE_ADMIN }
+        - { path: ^/media, roles: ROLE_ADMIN }
 
 when@test:
     security:
