add: implement AI writing assistant features and integrate with OpenAI API

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,3 +28,7 @@ services:
     App\EventListener\UserBannedListener:
         tags:
             - { name: kernel.event_listener, event: kernel.request }
+
+    App\Service\AIWritingAssistant:
+        arguments:
+            $apiKey: '%env(OPENAI_API_KEY)%'
