add: update .gitignore to exclude .env files and add OpenAI API key to .env

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 ###> symfony/framework-bundle ###
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -25,5 +26,3 @@
 ###< symfony/asset-mapper ###
 
 .idea/
-
-.env
