add: implement article translation feature with AI integration and update templates

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,7 @@ services:
     App\Service\AIWritingAssistant:
         arguments:
             $apiKey: '%env(OPENAI_API_KEY)%'
+
+    App\Service\AITranslationService:
+        arguments:
+            $apiKey: '%env(OPENAI_API_KEY)%'
